# omni-cli

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  README.pt.md  mkdocs.yml  pyproject.toml  vercel.json
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: ARCHITECTURE.md  COMMANDS.md  COMMANDS.pt.md  CONTRIBUTING.md  CONTRIBUTING.pt.md  ENTERPRISE_SETUP.md  ENTERPRISE_SETUP.pt.md  EXAMPLES.md  EXAMPLES.pt.md  FAQ.md  FAQ.pt.md  GETTING_STARTED.md  GETTING_STARTED.pt.md  INSTALLATION.md  INSTALLATION.pt.md  MCP_INTEGRATION.md  MCP_INTEGRATION.pt.md  MEMORY_DEEP_DIVE.md  MEMORY_DEEP_DIVE.pt.md  MIGRATION.md  MIGRATION.pt.md  PERFORMANCE.md  PERFORMANCE.pt.md  PLUGIN_DEVELOPMENT.md  PLUGIN_DEVELOPMENT.pt.md  SECURITY.md  SECURITY.pt.md  TROUBLESHOOTING.md  TROUBLESHOOTING.pt.md  USE_CASES.md  USE_CASES.pt.md  index.md  index.pt.md
docs/stylesheets/: extra.css
scripts/: generate_logo.py
scripts/completion/: omni-completion.bash  omni-completion.zsh
src/omni/: __init__.py  cli.py
src/omni/commands/: __init__.py  aws.py  cloudflare.py  completion.py  config.py  github.py  hostinger.py  mcp.py  memory.py  plugins.py  unleash.py  update.py  vercel.py
src/omni/core/: __init__.py  config.py  executor.py  logger.py  plugins.py  profiles.py
tests/: __init__.py  test_cli.py  test_extended.py
