[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omni-cli"
version = "0.1.0"
description = "A CLI das CLIs - Hub unificado para orquestrar ferramentas de desenvolvimento"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Mateus Siqueira", email = "mateus@conecthu.com"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]
keywords = ["cli", "hub", "orchestrator", "mcp", "memory", "hostinger", "github", "unleash"]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "requests>=2.31.0",
    "httpx>=0.25.0",
    "click>=8.1.0",
    "psutil>=5.9.0",
    "toml>=0.10.2",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "pre-commit>=3.5.0",
]

[project.scripts]
omni = "omni.cli:app"
omni-cli = "omni.cli:app"

[project.urls]
Homepage = "https://github.com/mateussiqueira/omni-cli"
Repository = "https://github.com/mateussiqueira/omni-cli"
Issues = "https://github.com/mateussiqueira/omni-cli/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/omni"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=omni --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["src/omni"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
